tea-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-tracker
  labels:
    app: tea-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tea-tracker
  template:
    metadata:
      labels:
        app: tea-tracker
    spec:
      volumes:
      - name: data
        nfs:
          path: /srv/share/backed/appdata/tea-tracker/
          server: mario.local.ongy.net
          readOnly: false
      - name: psql-tls-secrets
        secret:
          defaultMode: 416
          optional: true
          secretName: psql-client-secret
      containers:
      - name: tea-tracker
        image: cr.local.ongy.net/ongy/tea-tracker:v0.0.1
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /data
        - mountPath: "/psql-tls-secrets"
          name: psql-tls-secrets
