tea-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-tracker
spec:
  selector:
    app: tea-tracker
  ports:
  - name: http
    port: 80
    targetPort: 3000
