tea-tracker/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tea-tracker
spec:
  hostnames:
  - teas.local.ongy.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: tea-tracker
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
